<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primary_dark_material_dark">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/base"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/ebase"
            android:textColorHint="@color/gray"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altura"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/ealtura"
            android:textColorHint="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/eradio"
            android:textColorHint="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lado"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/elado"
            android:textColorHint="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_light">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuadro"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:gravity="left|center_vertical"
                android:id="@+id/rcuad"
                />
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/triang"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:gravity="left|center_vertical"
                android:id="@+id/rtrian"/>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rect"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:gravity="left|center_vertical"
                android:id="@+id/rrect"/>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/circulo"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:gravity="left|center_vertical"
                android:id="@+id/rcirc"/>

        </RadioGroup>

        </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calcular"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/bcalcular"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_material_light"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Total"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/ttotal"/>

    </LinearLayout>
</LinearLayout>
